objects/CIO_Dashboard_Data__c.object
<CustomObject><fields>
        <fullName>CIO_Adoption__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adoption</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CIO_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed?</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>CIO_Developer_Skill_Name__c</fullName>
        <label>Developer Skill Name</label>
        <length>255</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CIO_IT_Timesheet_Name__c</fullName>
        <displayFormat>II-{00000}</displayFormat>
        <label>IT Timesheet Name</label>
        <type>AutoNumber</type>
    </fields><fields>
        <fullName>CIO_Role__c</fullName>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Field Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CIO_Sprint__c</fullName>
        <label>Sprint</label>
        <picklist>
            <picklistValues>
                <fullName>Sprint 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprint 5</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CIO_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Backlog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accepted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CIO_Total_Staff__c</fullName>
        <label>Total Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><fields>
        <fullName>CIO_Trailhead_Badge__c</fullName>
        <label>Trailhead Badge</label>
        <picklist>
            <picklistValues>
                <fullName>App Customization</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Triggers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Apex Basics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Application Lifecycle Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Modelling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HTML5 &amp; Hybrid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning App Builder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning Components</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning Connect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning Design System</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Native iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UI Customization</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>CIO_User_Story_Name__c</fullName>
        <label>User Story Name</label>
        <length>30</length>
        <type>Text</type>
    </fields><fields>
        <fullName>CIO_work_type__c</fullName>
        <label>Work Type</label>
        <picklist>
            <picklistValues>
                <fullName>Projects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Keeping the Lights On</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Included in the App Cloud Harbor Cruise package.</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ReadWrite</externalSharingModel><label>CIO Dashboard Data</label><nameField>
        <label>Adoption Name</label>
        <type>Text</type>
    </nameField><pluralLabel>CIO Dashboard Data</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CIO_Adoption__c</columns>
        <columns>CIO_Role__c</columns>
        <columns>CIO_Completed__c</columns>
        <columns>CIO_Developer_Skill_Name__c</columns>
        <columns>CIO_work_type__c</columns>
        <columns>CIO_IT_Timesheet_Name__c</columns>
        <columns>CIO_Sprint__c</columns>
        <columns>CIO_Status__c</columns>
        <columns>CIO_Total_Staff__c</columns>
        <columns>CIO_Trailhead_Badge__c</columns>
        <columns>CIO_User_Story_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>